# laby-api

./: .gitignore  README.md  char.py  dirs.py  generate_and_solve.py  grid.py  laby.py  node.py  pyproject.toml  route.py  router.py  routing.py  utils.py
laby/: char.py  dirs.py  generate_and_solve.py  grid.py  laby.py  node.py  router.py
laby_api/: char.py  dirs.py  generate_and_solve.py  grid.py  laby.py  node.py  router.py
tests/: test_grid.py
