[tool.poetry]
name = "laby-api"
version = "0.1.0"
description = "Simple labyrinth manipulations."
authors = ["Andrei Toroplean <60916097+AndreiToroplean@users.noreply.github.com>"]
repository = "https://github.com/AndreiToroplean/laby-api"
readme = "README.md"
packages = [ { include = "laby_api" } ]

[tool.poetry.dependencies]
python = "^3.10"
core = {git = "https://github.com/AndreiToroplean/core.git"}
pytest = "^7.2.0"

[tool.poetry.scripts]
generate_and_solve = 'laby_api.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
